integ-tests/tests/snapshots/parser__bad_booleans__leading_f.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[unquoted-string]: 
  ┌─ leading_f:1:7
  │
1 │ foo = f2
  │       ^^ string is not quoted


